--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "dev": "webpack-dev-server --content-base public"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "feather-icons": "^4.21.0"
   }
 }
