--- a/package.json
+++ b/package.json
@@ -2,28 +2,62 @@
   "name": "budibase-builder",
   "version": "1.0.0",
   "license": "AGPL-3.0",
+  "main":"electron/main.js",
   "devDependencies": {
+    "babel-register": "^6.26.0",
     "cross-env": "^5.1.5",
     "css-loader": "^1.0.0",
+    "electron": "^5.0.1",
+    "electron-builder": "^20.40.2",
+    "electron-rebuild": "^1.7.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.4.0",
     "serve": "^10.0.2",
     "style-loader": "^0.23.1",
-    "svelte": "^3.1.0",
+    "svelte": "^3.2.2",
     "svelte-loader": "2.13.3",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public"
+    "build": "cross-env NODE_ENV=production webpack && electron-builder",
+    "dev": "webpack-dev-server --content-base public",
+    "devd": "cross-env NODE_ENV=dev_desktop node ./build_scripts/run_dev.js",
+    "electron-main-dev": "cross-env HOT=1 electron ./electron/main",
+    "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir ."
   },
   "dependencies": {
     "budibase-core": "git+ssh://git@github.com:Budibase/budibase-core-dist.git",
     "feather-icons": "^4.21.0",
     "flatpickr": "^4.5.7",
     "lodash": "^4.17.11"
+  },
+  "build": {
+    "productName": "budibase-builder",
+    "appId": "budibase.builder",
+    "files": [
+      "public/**/*",
+      "node_modules/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage"
+      ],
+      "category": "Development"
+    },
+    "directories": {
+      "buildResources": "build",
+      "output": "release"
+    }
   }
 }
