--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "budibase-builder",
   "version": "1.0.0",
   "license": "AGPL-3.0",
-  "main":"electron/main.js",
+  "main": "electron/main.js",
   "devDependencies": {
     "babel-register": "^6.26.0",
     "cross-env": "^5.1.5",
     "css-loader": "^1.0.0",
     "electron": "^5.0.1",
     "electron-builder": "^20.40.2",
-    "electron-rebuild": "^1.7.3",
+    "electron-webpack": "^2.6.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.4.0",
@@ -22,11 +22,8 @@
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack && electron-builder",
-    "dev": "webpack-dev-server --content-base public",
-    "devd": "cross-env NODE_ENV=dev_desktop node ./build_scripts/run_dev.js",
-    "electron-main-dev": "cross-env HOT=1 electron ./electron/main",
-    "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir ."
+    "build": "electron-webpack",
+    "dev": "electron-webpack dev"
   },
   "dependencies": {
     "budibase-core": "git+ssh://git@github.com:Budibase/budibase-core-dist.git",
@@ -58,6 +55,12 @@
     "directories": {
       "buildResources": "build",
       "output": "release"
+    }
+  },
+  "electronWebpack": {
+    "renderer": {
+      "sourceDirectory": "public",
+      "webpackConfig": "webpack.renderer.additions.js"
     }
   }
 }
