--- a/package.json
+++ b/package.json
@@ -1,29 +1,12 @@
 {
   "name": "budibase-builder",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "license": "AGPL-3.0",
-  "main": "electron/main.js",
-  "devDependencies": {
-    "babel-register": "^6.26.0",
-    "cross-env": "^5.1.5",
-    "css-loader": "^1.0.0",
-    "electron": "^5.0.1",
-    "electron-builder": "^20.40.2",
-    "electron-webpack": "^2.6.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.4.0",
-    "serve": "^10.0.2",
-    "style-loader": "^0.23.1",
-    "svelte": "^3.2.2",
-    "svelte-loader": "2.13.3",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
-  },
   "scripts": {
-    "build": "electron-webpack",
-    "dev": "electron-webpack dev"
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack",
+    "dist": "yarn compile && electron-builder",
+    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
     "budibase-core": "git+ssh://git@github.com:Budibase/budibase-core-dist.git",
@@ -31,36 +14,20 @@
     "flatpickr": "^4.5.7",
     "lodash": "^4.17.11"
   },
-  "build": {
-    "productName": "budibase-builder",
-    "appId": "budibase.builder",
-    "files": [
-      "public/**/*",
-      "node_modules/**/*",
-      "electron/**/*",
-      "package.json"
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ]
-    },
-    "linux": {
-      "target": [
-        "deb",
-        "AppImage"
-      ],
-      "category": "Development"
-    },
-    "directories": {
-      "buildResources": "build",
-      "output": "release"
-    }
+  "devDependencies": {
+    "electron": "4.0.1",
+    "electron-builder": "20.38.4",
+    "electron-webpack": "^2.6.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "postcss-loader": "^3.0.0",
+    "source-map-support": "^0.5.12",
+    "svelte": "^3.4.1",
+    "svelte-loader": "^2.13.4",
+    "webpack": "4.28.4"
   },
   "electronWebpack": {
     "renderer": {
-      "sourceDirectory": "public",
-      "webpackConfig": "webpack.renderer.additions.js"
+      "webpackConfig": "custom.webpack.additions.js"
     }
   }
 }
