--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "electron": "4.0.1",
     "electron-builder": "20.38.4",
-    "electron-webpack": "^2.6.2",
+    "electron-webpack": "file:electron-webpack/packages/electron-webpack",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "postcss-loader": "^3.0.0",
     "source-map-support": "^0.5.12",
