--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budibase-builder",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "AGPL-3.0",
   "scripts": {
     "dev": "electron-webpack dev",
@@ -18,7 +18,8 @@
     "feather-icons": "^4.21.0",
     "flatpickr": "^4.5.7",
     "lodash": "^4.17.11",
-    "uikit": "^3.1.5"
+    "uikit": "^3.1.5",
+    "source-map-support": "^0.5.12"
   },
   "devDependencies": {
     "electron": "4.0.1",
@@ -26,7 +27,6 @@
     "electron-webpack": "file:electron-webpack/packages/electron-webpack",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "postcss-loader": "^3.0.0",
-    "source-map-support": "^0.5.12",
     "svelte": "^3.4.1",
     "svelte-loader": "^2.13.4",
     "webpack": "4.28.4",
@@ -34,8 +34,7 @@
   },
   "electronWebpack": {
     "renderer": {
-      "webpackConfig": "custom.webpack.additions.js",
-      "mergeFunction": "custom.webpack-merge.js"
+      "webpackConfig": "custom.webpack.additions.js"
     },
     "title": "Budibase Builder"
   }
